# cookiecutter-pypackage

./: README.md  cookiecutter.json  example-config.yml  shell.nix
.github/workflows/: main.yml
hooks/: post_gen_project.py
{{cookiecutter.folder_name}}/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.folder_name}}/.github/workflows/: docs.yml  main.yml
{{cookiecutter.folder_name}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.folder_name}}/tests/integration/: test_dummy.py
{{cookiecutter.folder_name}}/tests/unit/cli/: test_cli.py
{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/cli/: __init__.py  cli.py
